# demucs-metacog

./: .gitignore  README.md  pyproject.toml  separate.py
src/demucs_metacog/: __init__.py  engine.py  intent.py  io.py  perceptual.py  quality.py  separator.py  vad.py
tests/: test_engine_mock.py  test_intent.py  test_quality.py  test_vad_perceptual.py
