[project]
name = "demucs-metacog"
version = "0.1.0"
description = "Demucs + Temporal Metacognition loop for intelligent stem separation"
requires-python = ">=3.10"
dependencies = [
    "demucs>=4.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov",
]
